--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -44,16 +44,17 @@ li{
 
 .login-header{
     /* width: 1700px; */
-    width: 1600px;
-
-    height:80px;
+    /* width: 1600px; */
+    /* border: #1fdf3f 1px solid; */
+    padding: 20px 0;
+    height:100px;
     /* padding: auto; */
     background-color: rgb(255,255,255);
 
 }
 .login-header .logo{
     float: left;
-    margin-left: 25px;
+    margin-left: 130px;
     margin-top:10px;
     width: 60px;
     height: 60px;
@@ -70,20 +71,24 @@ li{
     font-size: 30px;
 }
 .contain{
- position: relative;
-    width: 1600px;
-    height: 710px;
+    /* border: #00a4ff 1px solid; */
+    position: relative;
+    width: 1200px;
+    height: 600px;
+    overflow: hidden;
+    margin: 0 auto;
     /* background-color: rgb(204, 42, 42); */
-    background-image:url(../image/bg.png) 
+    /* background-image:url(../image/bg.png)   */
     
 
 }
 .login{
     position:absolute;
-    top: 150px;
-    right: 250px;
-    width: 430px;
-    height: 430px;
+    top: 115px;
+    right:60px;
+    width: 400px;
+    height: 400px;
+    border-radius: 5px;
     background-color: rgb(254, 251, 252);
 }
 .login form{
@@ -91,13 +96,13 @@ li{
 }
 .login .login-btn{
     margin-top: 15px;
-    width: 300px;
+    width: 275px;
     color: white;
     background-color: rgb(24, 141, 236);
 }
 .login span {
     float:right;
-    margin: 40px;
+    margin: 0 40px ;
 }
 
 
@@ -204,9 +209,37 @@ li{
     clear: both;
     visibility: hidden;
 }
+.tb{
+    width: 100%;
+}
+.tb thead{
+    background-color: #f8f8f8;
+}
+.tb thead th{
+    height: 42px;
+    color: #999;
+    font-weight: 400;
+}
+.tb tbody tr{
+    padding: 15px 5px;
+    border-bottom: 1px solid #eee;
+    height: 60px;
+}
+.tb td,th{
+    padding: 20px;
+}
+.tb .num{
+    color: #e9830e;
+}
+.tb tr:hover{
+    background-color: #f3f3f3;
+}
+.linkdel:hover{
+    color: #e21e1e;
+}
 .footer{
     margin: 0 auto;
-    margin-top: 15px;
+    /* margin-top: 15px; */
 
     height: 200px;
     background-color: #222222;
@@ -262,7 +295,7 @@ li{
     width: 345px;
     height: 40px;
     border:1px solid #00a4ff;
-    color: #bfbfbf;
+    /* color: #bfbfbf; */
     font-size: 14px;
     padding:0 0 0 15px; /*盒子设置了宽度，会撑大盒子*/
     
@@ -374,18 +407,20 @@ li{
 }
 .review .info{
     /* border: #00a4ff 1px solid; */
-    /* float:left; */
+    /* float:
+    
+    ; */
     float: right;
     /* position: relative; */
     left:560px;
     width: 600px;
     margin-left: 25px;
 }
-.review .info .title{
+/* .review .info .title{
     
-    /* margin: 30px auto auto 40px; */
+    /* margin: 30px auto auto 40px; 
     
-}
+} */
 .review .info >.desc,.price .user{
   padding: 20px;
 }
@@ -401,3 +436,39 @@ li{
     margin-top: 50px;
     margin-left: 475px;
 }
+
+/* 收藏夹部分 */
+.container{
+    height: 2000px;
+    background-color: #fff;
+
+}
+/* 
+.container ul li{
+    border: transparent 1px solid ;
+    display: block;
+    border-radius: 10px;
+    width: 900px;
+    background-color: #fff;
+    height: 80px;
+    margin-top: 12px;
+    
+}
+.container ul li p{
+    display: block;
+    margin: 15px 15px 0 15px;
+    font-size: 24px;
+    /* height: 50px; 
+}
+.container ul li a span{
+    font-size: 12px;
+    color:  #b0b0b0;
+    margin-left: 15px;
+
+}
+.container ul li:hover{
+    z-index: 2;
+    box-shadow: 0 15px 30px rgb(0 0 0 / 10%);
+    transform: translate3d(0,-2px,0);
+
+} */
